--- a/cup_of_sugar_react/src/Carousel.css
+++ b/cup_of_sugar_react/src/Carousel.css
@@ -2,7 +2,12 @@
 
 
 .h3-responsive{
-  color: white;
-  font-size: 7em;
+  color: white ;
+  font-size: 6.5em;
   font-family: 'Permanent Marker', cursive;
+}
+
+.text{
+  color:black !important;
+  font-size: 2.3em;
 }
