--- a/cup_of_sugar_react/src/App.css
+++ b/cup_of_sugar_react/src/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center !important;
   font-family: 'Permanent Marker', cursive;
+  display: flex;
+  flex-flow: column;
 }
 
 .app-title {
