--- a/cup_of_sugar_react/src/App.css
+++ b/cup_of_sugar_react/src/App.css
@@ -3,6 +3,8 @@
   font-family: 'Permanent Marker', cursive;
   display: flex;
   flex-flow: column;
+  height: 90vh !important;
+ 
 }
 
 .app-title {
@@ -16,6 +18,9 @@
   color: white;
   padding: 2%;
 }
+
+
+
 
 
 
