--- a/cup_of_sugar_react/src/components/products/products.css
+++ b/cup_of_sugar_react/src/components/products/products.css
@@ -3,6 +3,12 @@
     flex-wrap: wrap;
 }
 
-.product-card {
-    flex: 0 0 30%;
+ .product-card {
+    padding: 10px;
+   } 
+
+.card{
+    height: 30em;
+    width:  16em;
+    background-color: rgba(127, 162, 0, 0.858) !important;
 }
