--- a/cup_of_sugar_react/src/footer.css
+++ b/cup_of_sugar_react/src/footer.css
@@ -1,4 +1,5 @@
 .footer{
-    background-color: #EF8A17 !important;
-    font-size: 15px;
+    background-color: #9DB68C !important;
+    font-size: 13px;
+    height: 30px !important;
 }
